ライブコーディング4回目終わり

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -36,6 +36,9 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  background-color: $background;
+  position: relative;
+  z-index: -9999;
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
