--- a/src/sass/setting/_breakpoints.scss
+++ b/src/sass/setting/_breakpoints.scss
@@ -6,6 +6,7 @@ $breakpoints: (
   md: 767,
   lg: 1023,
   inner: strip-unit($inner),
+  img: 1439,
   xl: 1440,
 );
 
@@ -16,5 +17,6 @@ $mediaquerys: (
   md: "screen and (max-width: #{map-get($breakpoints,'md')}px)",
   lg: "screen and (max-width: #{map-get($breakpoints,'lg')}px)",
   inner: "screen and (max-width: #{map-get($breakpoints,'inner')}px)",
+  img: "screen and (max-width: #{map-get($breakpoints,'img')}px)",
   xl: "screen and (min-width: #{map-get($breakpoints,'xl')}px)",
 );
