--- a/src/sass/setting/_typography.scss
+++ b/src/sass/setting/_typography.scss
@@ -1,9 +1,9 @@
 /* FontFamily */
-$base-font-family: "";
-$second-font-family: "";
+$han-font-family: source-han-sans-japanese, sans-serif;
+$sans-font-family: 'Noto Sans JP', sans-serif;
 
 body {
-  font-family: $base-font-family;
+  font-family: $sans-font-family;
 }
 
 /* font-weight */
